--- a/tut1/tutorial1.ipynb
+++ b/tut1/tutorial1.ipynb
@@ -27,19 +27,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Hello World\n"
+      "hello world\n"
      ]
     }
    ],
    "source": [
-    "print (\"Hello World\")"
+    "print (\"hello world\")"
    ]
   },
   {
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -71,14 +71,32 @@
     "c = \"cinnamon\" #Lưu ý: các chữ cái phải nằm trong 2 dấu nháy \"\" hoặc ''. Có thể dùng 1 trong 2.\n",
     "d = True # Chỉ nhận giá trị True/False \n",
     "\n",
-    "e = [1, 2, 3, 4, 5] # \n",
+    "e = [1, 2, 3, 4, 5] # [1]\n",
     "f = {\n",
-    "    'ten': 'python',\n",
+    "    'ten': {\"last_name\":\"pham\"},\n",
     "    'tuoi':18,\n",
     "    'gioi_tinh':'chua_xac_dinh',\n",
     "    'co_oc_khoong': True,\n",
     "    'so_thich': ['quay_tay', 'bung_thun']\n",
     "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "abc'dsadsa\n"
+     ]
+    }
+   ],
+   "source": [
+    "# abc\"dsadsa\n",
+    "print (\"abc'dsadsa\")"
    ]
   },
   {
@@ -101,7 +119,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1, 2, 3, 4, 5]"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "e"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -110,13 +148,53 @@
        "3"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "a + 2*a # integer "
+    "a + 2*a # cong 2 chuoi"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'cinnamon100 trieu do'"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "c + e # nối 2 string"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "'ca' in c # kiểm tra chuỗi có chứa 1 chuỗi con nào không?"
    ]
   },
   {
@@ -127,7 +205,7 @@
     {
      "data": {
       "text/plain": [
-       "'cinnamoncinnamon'"
+       "[1, 2, 3, 4, 5, 1, 2, 3, 4, 5]"
       ]
      },
      "execution_count": 16,
@@ -136,7 +214,7 @@
     }
    ],
    "source": [
-    "c + c # nối 2 string"
+    "e + e # nối 2 list"
    ]
   },
   {
@@ -147,7 +225,7 @@
     {
      "data": {
       "text/plain": [
-       "True"
+       "4"
       ]
      },
      "execution_count": 17,
@@ -156,27 +234,7 @@
     }
    ],
    "source": [
-    "'na' in c # kiểm tra chuỗi có chứa 1 chuỗi con nào không?"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[1, 2, 3, 4, 5, 1, 2, 3, 4, 5]"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "e + e # nối 2 list"
+    "e[3]"
    ]
   },
   {
@@ -221,7 +279,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -231,7 +289,7 @@
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mIndexError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-11-2519b5ee6b44>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0me\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m5\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m<ipython-input-18-2519b5ee6b44>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0me\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m5\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
       "\u001b[0;31mIndexError\u001b[0m: list index out of range"
      ]
     }
@@ -251,7 +309,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -261,14 +319,109 @@
       "1\n",
       "2\n",
       "3\n",
+      "2\n",
+      "3\n",
       "4\n",
-      "5\n"
+      "3\n",
+      "4\n",
+      "5\n",
+      "4\n",
+      "5\n",
+      "6\n",
+      "5\n",
+      "6\n",
+      "7\n",
+      "10000\n"
+     ]
+    }
+   ],
+   "source": [
+    "elem = e[0]\n",
+    "####\n",
+    "print (elem)\n",
+    "print (elem + 1)\n",
+    "print (elem + 2)\n",
+    "####\n",
+    "\n",
+    "elem = e[1]\n",
+    "####\n",
+    "print (elem)\n",
+    "print (elem + 1)\n",
+    "print (elem + 2)\n",
+    "\n",
+    "####\n",
+    "\n",
+    "elem = e[2]\n",
+    "####\n",
+    "print (elem)\n",
+    "print (elem + 1)\n",
+    "print (elem + 2)\n",
+    "\n",
+    "####\n",
+    "\n",
+    "elem = e[3]\n",
+    "####\n",
+    "print (elem)\n",
+    "print (elem + 1)\n",
+    "print (elem + 2)\n",
+    "\n",
+    "####\n",
+    "\n",
+    "elem = e[4]\n",
+    "####\n",
+    "print (elem)\n",
+    "print (elem + 1)\n",
+    "print (elem + 2)\n",
+    "\n",
+    "####\n",
+    "\n",
+    "print (10000)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "2\n",
+      "3\n",
+      "10000\n",
+      "2\n",
+      "3\n",
+      "4\n",
+      "10000\n",
+      "3\n",
+      "4\n",
+      "5\n",
+      "10000\n",
+      "4\n",
+      "5\n",
+      "6\n",
+      "10000\n",
+      "5\n",
+      "6\n",
+      "7\n",
+      "10000\n"
      ]
     }
    ],
    "source": [
     "for elem in [1,2,3,4,5]: # duyet qua tat ca cac phan tu trong 1 list\n",
-    "    print (elem)"
+    "    ###\n",
+    "    print (elem)\n",
+    "    print (elem + 1)\n",
+    "    print (elem + 2)\n",
+    "    ###\n",
+    "    \n",
+    "print (10000)\n",
+    "\n",
+    "    \n",
+    "    \n"
    ]
   },
   {
@@ -282,7 +435,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a = 10"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a <= 11"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -304,19 +486,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Di lam tre xiu\n"
+      "Di lam\n"
      ]
     }
    ],
    "source": [
-    "thoi_tiet = 'mua_nhe_nhe'\n",
+    "thoi_tiet = 'mua_nhe_nhe________'\n",
     "\n",
     "if thoi_tiet == 'mua_sap_mat': # Cách viết if_2\n",
     "    print (\"O nha cho khoe\")\n",
@@ -324,6 +506,26 @@
     "    print (\"Di lam tre xiu\")\n",
     "else:\n",
     "    print (\"Di lam\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "5 == 5"
    ]
   },
   {
@@ -336,7 +538,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -345,15 +547,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Original file: ./jsons/19_惠蘭ジーアンドエフデザイン株式会社_0.json File name: ./jsons/19_惠蘭ジーアンドエフデザイン株式会社_0 extension: .json\n",
-      "------------------------\n",
       "1701ﾔﾏﾀﾞ請求書_0.json\n",
       "0785_039_4.json\n",
       "0785_039_2.json\n",
@@ -409,33 +609,33 @@
       "19_惠蘭ジーアンドエフデザイン株式会社_1.json\n",
       "10_星光ビル管理_1.json\n",
       "ＮＴＴデータ_0.json\n",
-      "------------------------\n",
-      "path_1: ./jsons/ path_2: 1701ﾔﾏﾀﾞ請求書_0.json merge to: ./jsons/1701ﾔﾏﾀﾞ請求書_0.json\n"
+      "------------------------\n"
      ]
     }
    ],
    "source": [
     "# Một số thao tác đơn giản\n",
     "\n",
-    "# Lấy extension của 1 file_path.\n",
-    "file_path = \"./jsons/19_惠蘭ジーアンドエフデザイン株式会社_0.json\"\n",
+    "# # Lấy extension của 1 file_path.\n",
+    "# file_path = \"./jsons/19_惠蘭ジーアンドエフデザイン株式会社_0.json\"\n",
     "\n",
-    "file_name, extension = os.path.splitext(file_path)\n",
-    "print (\"Original file:\", file_path, \"File name:\", file_name, \"extension:\", extension)\n",
+    "# file_name, extension = os.path.splitext(file_path)\n",
+    "# print (\"Original file:\", file_path, \"File name:\", file_name, \"extension:\", extension)\n",
     "\n",
-    "print ('------------------------')\n",
+    "# print ('------------------------')\n",
     "\n",
     "# Lấy tất cả file trong 1 folder\n",
-    "folder_dir = \"./jsons/\"\n",
+    "# folder_dir = \"./jsons/\"\n",
     "\n",
-    "file_names = os.listdir(folder_dir)\n",
-    "for file_name in file_names:\n",
-    "    print (file_name)\n",
-    "\n",
+    "# file_names = os.listdir(folder_dir)\n",
+    "# for file_name in file_names:\n",
+    "# #     _file_name, extension = os.path.splitext(file_path)\n",
+    "# #     print (\"Original file:\", file_name, \"File name:\", _file_name, \"extension:\", extension)\n",
+    "#     print (file_name)\n",
     "    \n",
     "# Nối 2 đường dẫn\n",
     "print ('------------------------')\n",
-    "file_path_1 = \"./jsons/\"\n",
+    "file_path_1 = \"./jsons\"\n",
     "file_path_2 = \"1701ﾔﾏﾀﾞ請求書_0.json\"\n",
     "\n",
     "file_path = os.path.join(file_path_1, file_path_2) \n",
